# Rtos_course_project

./: CMakeLists.txt  README.md
FreeRTOS-Kernel/: CMakeLists.txt  tasks.c  timers.c
FreeRTOS-Kernel/include/: conswitch.h  task.h
src/: main.c
